# mandelbrot

./: .travis.yml  LICENSE  README.md  mandelbrot.cabal  stack.yaml
app/: Main.hs
images/: arc.json  background.json  colorful.json  default.json  point.json
src/: Mandelbrot.hs
src/Mandelbrot/: Coloring.hs
src/Mandelbrot/Algorithms/: EscapeTime.hs
src/Mandelbrot/Algorithms/EscapeTime/: Internal.hs
test/: MandelbrotSpec.hs  log.txt
test/Mandelbrot/: ColoringSpec.hs
test/Mandelbrot/Algorithms/: EscapeTimeSpec.hs
test/Mandelbrot/Algorithms/EscapeTime/: InternalSpec.hs
