name:                mandelbrot
version:             0.1.0.0
synopsis:            Mandelbrot image generator using JuicyPixels to handle the image processing.
description:         Please see README.md
homepage:            https://github.com/matt-keibler/mandelbrot#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Keibler
maintainer:          matthew.keibler@gmail.com
copyright:           2016 Matthew Keibler
category:            Graphics, Image
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mandelbrot
                     , Mandelbrot.Algorithms.EscapeTime
                     , Mandelbrot.Algorithms.EscapeTime.Internal
                     , Mandelbrot.Coloring
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable mandelbrot
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , JuicyPixels >= 3.2
                     , mandelbrot
  default-language:    Haskell2010

test-suite mandelbrot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mandelbrot
                     , hspec
                     , QuickCheck
                     , random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matt-keibler/mandelbrot
